refactor : InputView 메소드 간소화, 불필요한 return 제거, final 키워드 추가